<resources>
    <string name="app_name">Quizze</string>

    <string name="email_unverified">Email verification not done.Check your email.</string>
    <string name="email_sent">Verification email is sent.Check your email.</string>
    <string name="Welcome">Welcome back, User</string>
    <string name="email">Email</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_link_to_login">Already Member! Login</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_tests">Tests</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register now!</string>
    <string name="Sign_in_login">Sign In</string>
    <string name="email_txt">E-MAIL</string>
    <string name="pass_txt">PASSWORD</string>
    <string name="f_name_txt">Full Name</string>
    <string name="id_txt">ID NO.</string>
    <string name="contact_txt">Contact No.</string>
    <string name="department_txt">Department</string>
    <string name="branch_txt">Branch</string>
    <string name="batch_txt">Batch</string>
    <string name="semester_txt">Semester</string>
    <string name="designation_txt">Designation</string>

    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_mobile">mobile required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_mobile_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_unsuccess">Registration Unsuccessful, Please try again</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_error_designation">designation required</string>
    <string name="input_error_id">Id required</string>

    <string name="remember_me">Remember Me</string>
    <string name="Student_regi">Registration</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_UPdate">Update Details</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_give_feedback">Give Feedback</string>
    <string name="nav_result">Result</string>
    <string name="nav_create_class">Create Class</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>



</resources>
