<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:font="@font/lato_black"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_attempt_test"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:font="@font/lato_black"
            android:title="@string/nav_attempt_test" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:font="@font/lato_black"
            android:title="@string/nav_result" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:font="@font/lato_black"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:font="@font/lato_black"
                android:title="@string/nav_about_us" />

            <item
                android:id="@+id/feedback_id"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:font="@font/lato_black"
                android:title="@string/nav_give_feedback">
            </item>
        </menu>
    </item>
</menu>
